--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ ex_mon-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+/.vscode
+/.elixir_ls
